// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Audio files 1`] = `
<div
  className="Pinpoint document"
>
  <p>
    These are sample audio files
  </p>
  <div
    className="Pinpoint audio"
  >
    <audio
      controls={true}
    >
      <source
        src="https://file.edge.pinpoint.com/21fc8f6438973af8074d1e1b435cf837.mp3"
        type="audio/mpeg"
      />
      <source
        src="https://file.edge.pinpoint.com/21fc8f6438973af8074d1e1b435cf837.ogg"
        type="audio/ogg"
      />
      <div
        className="file"
      >
        <div
          className="container"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-file-audio fa-w-12 "
            data-icon="file-audio"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm-64 268c0 10.7-12.9 16-20.5 8.5L104 376H76c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h28l35.5-36.5c7.6-7.6 20.5-2.2 20.5 8.5v136zm33.2-47.6c9.1-9.3 9.1-24.1 0-33.4-22.1-22.8 12.2-56.2 34.4-33.5 27.2 27.9 27.2 72.4 0 100.4-21.8 22.3-56.9-10.4-34.4-33.5zm86-117.1c54.4 55.9 54.4 144.8 0 200.8-21.8 22.4-57-10.3-34.4-33.5 36.2-37.2 36.3-96.5 0-133.8-22.1-22.8 12.3-56.3 34.4-33.5zM384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="details"
          >
            <a
              className="filename"
              href="https://file.edge.pinpoint.com/21fc8f6438973af8074d1e1b435cf837"
              rel="noopener noreferrer"
              target="_blank"
            >
              sample.wav
            </a>
            <div
              className="size"
            >
              0 KB
            </div>
          </div>
          <div
            className="options"
          >
            <div
              className="option group"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-download fa-w-16 "
                data-icon="download"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span>
                Download
              </span>
            </div>
          </div>
        </div>
      </div>
    </audio>
  </div>
  <div
    className="Pinpoint audio"
  >
    <audio
      controls={true}
    >
      <source
        src="https://file.edge.pinpoint.com/68c65536419fd19a70d0bd27808383f2.mp3"
        type="audio/mpeg"
      />
      <source
        src="https://file.edge.pinpoint.com/68c65536419fd19a70d0bd27808383f2.wav"
        type="audio/wav"
      />
      <div
        className="file"
      >
        <div
          className="container"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-file-audio fa-w-12 "
            data-icon="file-audio"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm-64 268c0 10.7-12.9 16-20.5 8.5L104 376H76c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h28l35.5-36.5c7.6-7.6 20.5-2.2 20.5 8.5v136zm33.2-47.6c9.1-9.3 9.1-24.1 0-33.4-22.1-22.8 12.2-56.2 34.4-33.5 27.2 27.9 27.2 72.4 0 100.4-21.8 22.3-56.9-10.4-34.4-33.5zm86-117.1c54.4 55.9 54.4 144.8 0 200.8-21.8 22.4-57-10.3-34.4-33.5 36.2-37.2 36.3-96.5 0-133.8-22.1-22.8 12.3-56.3 34.4-33.5zM384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="details"
          >
            <a
              className="filename"
              href="https://file.edge.pinpoint.com/68c65536419fd19a70d0bd27808383f2"
              rel="noopener noreferrer"
              target="_blank"
            >
              sample.ogg
            </a>
            <div
              className="size"
            >
              0 KB
            </div>
          </div>
          <div
            className="options"
          >
            <div
              className="option group"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-download fa-w-16 "
                data-icon="download"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span>
                Download
              </span>
            </div>
          </div>
        </div>
      </div>
    </audio>
  </div>
  <div
    className="Pinpoint audio"
  >
    <audio
      controls={true}
    >
      <source
        src="https://file.edge.pinpoint.com/07a5991e20fc75e2a3dc77e461dea616.ogg"
        type="audio/ogg"
      />
      <source
        src="https://file.edge.pinpoint.com/07a5991e20fc75e2a3dc77e461dea616.wav"
        type="audio/wav"
      />
      <div
        className="file"
      >
        <div
          className="container"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-file-audio fa-w-12 "
            data-icon="file-audio"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm-64 268c0 10.7-12.9 16-20.5 8.5L104 376H76c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h28l35.5-36.5c7.6-7.6 20.5-2.2 20.5 8.5v136zm33.2-47.6c9.1-9.3 9.1-24.1 0-33.4-22.1-22.8 12.2-56.2 34.4-33.5 27.2 27.9 27.2 72.4 0 100.4-21.8 22.3-56.9-10.4-34.4-33.5zm86-117.1c54.4 55.9 54.4 144.8 0 200.8-21.8 22.4-57-10.3-34.4-33.5 36.2-37.2 36.3-96.5 0-133.8-22.1-22.8 12.3-56.3 34.4-33.5zM384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="details"
          >
            <a
              className="filename"
              href="https://file.edge.pinpoint.com/07a5991e20fc75e2a3dc77e461dea616"
              rel="noopener noreferrer"
              target="_blank"
            >
              sample.mp3
            </a>
            <div
              className="size"
            >
              0 KB
            </div>
          </div>
          <div
            className="options"
          >
            <div
              className="option group"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-download fa-w-16 "
                data-icon="download"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span>
                Download
              </span>
            </div>
          </div>
        </div>
      </div>
    </audio>
  </div>
</div>
`;

exports[`Test Youtube cover media with hqdefault 1`] = `
<section
  className="Pinpoint cover covermedia"
>
  <div
    className="Pinpoint media-container"
  >
    <div
      className="Pinpoint youtube"
    >
      <div
        className="yt"
        data-url="https://www.youtube-nocookie.com/embed/PoZWTEXRgKo?autoplay=1"
        style={
          Object {
            "backgroundImage": "url(\\"https://i.ytimg.com/vi/PoZWTEXRgKo/hqdefault.jpg\\")",
            "backgroundSize": "800px 800px",
          }
        }
      >
        <button
          aria-label="Play the Video"
          className="play-button"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Test Youtube cover media with maxresdefault 1`] = `
<section
  className="Pinpoint cover covermedia"
>
  <div
    className="Pinpoint media-container"
  >
    <div
      className="Pinpoint youtube"
    >
      <div
        className="yt"
        data-url="https://www.youtube-nocookie.com/embed/PoZWTEXRgKo?autoplay=1"
        style={
          Object {
            "backgroundImage": "url(\\"https://i.ytimg.com/vi/PoZWTEXRgKo/maxresdefault.jpg\\")",
            "backgroundSize": "1280px 720px",
          }
        }
      >
        <button
          aria-label="Play the Video"
          className="play-button"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Test Youtube cover media with mqdefault 1`] = `
<section
  className="Pinpoint cover covermedia"
>
  <div
    className="Pinpoint media-container"
  >
    <div
      className="Pinpoint youtube"
    >
      <div
        className="yt"
        data-url="https://www.youtube-nocookie.com/embed/PoZWTEXRgKo?autoplay=1"
        style={
          Object {
            "backgroundImage": "url(\\"https://i.ytimg.com/vi/PoZWTEXRgKo/mqdefault.jpg\\")",
            "backgroundSize": "240px 240px",
          }
        }
      >
        <button
          aria-label="Play the Video"
          className="play-button"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Test Youtube cover media with no poster 1`] = `
<section
  className="Pinpoint cover covermedia"
>
  <div
    className="Pinpoint media-container"
  >
    <div
      className="Pinpoint youtube"
    >
      <div
        className="yt"
        data-url="https://www.youtube-nocookie.com/embed/PoZWTEXRgKo?autoplay=1"
        style={
          Object {
            "backgroundImage": "url(\\"https://i.ytimg.com/vi/PoZWTEXRgKo/hqdefault.jpg\\")",
            "backgroundSize": "800px 800px",
          }
        }
      >
        <button
          aria-label="Play the Video"
          className="play-button"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Test Youtube cover media with sddefault 1`] = `
<section
  className="Pinpoint cover covermedia"
>
  <div
    className="Pinpoint media-container"
  >
    <div
      className="Pinpoint youtube"
    >
      <div
        className="yt"
        data-url="https://www.youtube-nocookie.com/embed/PoZWTEXRgKo?autoplay=1"
        style={
          Object {
            "backgroundImage": "url(\\"https://i.ytimg.com/vi/PoZWTEXRgKo/sddefault.jpg\\")",
            "backgroundSize": "640px 480px",
          }
        }
      >
        <button
          aria-label="Play the Video"
          className="play-button"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Test blockquote with code 1`] = `
<div
  className="Pinpoint document"
>
  <blockquote>
    <p>
      <code
        spellCheck="false"
      >
        GET api/regulations/:id
      </code>
    </p>
  </blockquote>
</div>
`;

exports[`Test empty doc 1`] = `
<div
  className="Pinpoint document"
>
  <p />
</div>
`;

exports[`Test file Video 1`] = `
<div
  className="Pinpoint document"
>
  <p>
    This is a sample movie
  </p>
  <div
    className="Pinpoint video"
  >
    <video
      controls={true}
    >
      <source
        src="https://cdn.pinpoint.com/videos/homepage/Home-Slot-Hero.mp4"
        type="video/mp4"
      />
      <div
        className="file"
      >
        <div
          className="container"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-file-video fa-w-12 "
            data-icon="file-video"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 121.941V128H256V0h6.059c6.365 0 12.47 2.529 16.971 7.029l97.941 97.941A24.005 24.005 0 0 1 384 121.941zM224 136V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248c-13.2 0-24-10.8-24-24zm96 144.016v111.963c0 21.445-25.943 31.998-40.971 16.971L224 353.941V392c0 13.255-10.745 24-24 24H88c-13.255 0-24-10.745-24-24V280c0-13.255 10.745-24 24-24h112c13.255 0 24 10.745 24 24v38.059l55.029-55.013c15.011-15.01 40.971-4.491 40.971 16.97z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="details"
          >
            <a
              className="filename"
              href="https://cdn.pinpoint.com/videos/homepage/Home-Slot-Hero.mp4"
              rel="noopener noreferrer"
              target="_blank"
            >
              sample-mov-file.mov
            </a>
            <div
              className="size"
            >
              14.5 MB
            </div>
          </div>
          <div
            className="options"
          >
            <div
              className="option group"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-download fa-w-16 "
                data-icon="download"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span>
                Download
              </span>
            </div>
          </div>
        </div>
      </div>
    </video>
  </div>
</div>
`;

exports[`Test file Video via File API 1`] = `
<div
  className="Pinpoint document"
>
  <p>
    This is a sample movie
  </p>
  <div
    className="Pinpoint video"
  >
    <video
      controls={true}
    >
      <source
        src="https://file.edge.pinpoint.com/2e6c2701e60cee677c42c34aa027bf1c.webm"
        type="video/webm"
      />
      <source
        src="https://file.edge.pinpoint.com/2e6c2701e60cee677c42c34aa027bf1c.ogg"
        type="video/ogg"
      />
      <source
        src="https://file.edge.pinpoint.com/2e6c2701e60cee677c42c34aa027bf1c.mp4"
        type="video/mp4"
      />
      <source
        src="https://file.edge.pinpoint.com/2e6c2701e60cee677c42c34aa027bf1c"
        type="video/quicktime"
      />
      <div
        className="file"
      >
        <div
          className="container"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-file-video fa-w-12 "
            data-icon="file-video"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 121.941V128H256V0h6.059c6.365 0 12.47 2.529 16.971 7.029l97.941 97.941A24.005 24.005 0 0 1 384 121.941zM224 136V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248c-13.2 0-24-10.8-24-24zm96 144.016v111.963c0 21.445-25.943 31.998-40.971 16.971L224 353.941V392c0 13.255-10.745 24-24 24H88c-13.255 0-24-10.745-24-24V280c0-13.255 10.745-24 24-24h112c13.255 0 24 10.745 24 24v38.059l55.029-55.013c15.011-15.01 40.971-4.491 40.971 16.97z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="details"
          >
            <a
              className="filename"
              href="https://file.edge.pinpoint.com/2e6c2701e60cee677c42c34aa027bf1c"
              rel="noopener noreferrer"
              target="_blank"
            >
              sample-mov-file.mov
            </a>
            <div
              className="size"
            >
              0 KB
            </div>
          </div>
          <div
            className="options"
          >
            <div
              className="option group"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-download fa-w-16 "
                data-icon="download"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span>
                Download
              </span>
            </div>
          </div>
        </div>
      </div>
    </video>
  </div>
</div>
`;

exports[`Test info notice with monospaced font 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="notice info"
  >
    <div
      className="icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-info-circle fa-w-16 fa-fw "
        data-icon="info-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <p>
        <code
          spellCheck="false"
        >
          This is an info notice with monospaced font
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`Test simple H1 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="heading"
  >
    <h1>
      H1 Heading
    </h1>
    <a
      aria-hidden="true"
      className="anchor"
      href="#H1-Heading"
      id="H1-Heading"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-link fa-w-16 "
        data-icon="link"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Test simple H2 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="heading"
  >
    <h2>
      H2 Heading
    </h2>
    <a
      aria-hidden="true"
      className="anchor"
      href="#H2-Heading"
      id="H2-Heading"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-link fa-w-16 "
        data-icon="link"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Test simple H3 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="heading"
  >
    <h3>
       
      H3 Heading
    </h3>
    <a
      aria-hidden="true"
      className="anchor"
      href="#H3-Heading"
      id="H3-Heading"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-link fa-w-16 "
        data-icon="link"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Test simple H4 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="heading"
  >
    <h4>
      H4 Heading
    </h4>
    <a
      aria-hidden="true"
      className="anchor"
      href="#H4-Heading"
      id="H4-Heading"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-link fa-w-16 "
        data-icon="link"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Test simple blockquote 1`] = `
<div
  className="Pinpoint document"
>
  <blockquote>
    Hi
  </blockquote>
</div>
`;

exports[`Test simple break 1`] = `
<div
  className="Pinpoint document"
>
  <br />
</div>
`;

exports[`Test simple bullet list 1`] = `
<div
  className="Pinpoint document"
>
  <ul>
    <li>
      Hi
    </li>
  </ul>
</div>
`;

exports[`Test simple code block 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="code_block"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "black",
          "border": ".3em solid hsl(0, 0%, 33%)",
          "borderRadius": ".25em",
          "borderWidth": "0px",
          "boxShadow": "1px 1px .5em black inset",
          "color": "white",
          "fontFamily": "ui-monospace",
          "fontSize": "1em",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": "0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 -.1em .2em black",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        className="language-javascript"
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "white",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "fontSize": "1em",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "textShadow": "0 -.1em .2em black",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        <span
          className="token"
          style={
            Object {
              "color": "hsl(53, 89%, 79%)",
            }
          }
        >
          var
        </span>
        <span
          style={Object {}}
        >
           a 
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "hsl(76, 21%, 52%)",
            }
          }
        >
          =
        </span>
        <span
          style={Object {}}
        >
           
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "hsl(14, 58%, 55%)",
            }
          }
        >
          1
        </span>
        <span
          className="token"
          style={
            Object {
              "Opacity": ".7",
            }
          }
        >
          ;
        </span>
      </code>
    </pre>
    <div
      className="copy false"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-copy fa-w-14 "
        data-icon="copy"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Test simple emoji 1`] = `
<div
  className="Pinpoint document"
>
  <span
    className="emoji"
    data-markup="heart"
  >
    ❤️
  </span>
</div>
`;

exports[`Test simple error notice 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="notice error"
  >
    <div
      className="icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times-circle fa-w-16 fa-fw "
        data-icon="times-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <p>
        This is an error notice
      </p>
    </div>
  </div>
</div>
`;

exports[`Test simple hr 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="hr"
  >
    <div>
      <hr />
    </div>
  </div>
</div>
`;

exports[`Test simple image block 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="image_block undefined"
  >
    <div
      className="image"
    >
      <img
        alt="Image Caption"
        className="Pinpoint Image medium-zoom-body"
        decoding="async"
        src="https://cdn.pinpoint.com/card.png"
      />
    </div>
    <div
      className="alt"
    >
      Image Caption
    </div>
  </div>
</div>
`;

exports[`Test simple image block with link 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="image_block undefined"
  >
    <a
      href="https://pinpoint.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="image"
      >
        <img
          alt="Image Caption"
          className="Pinpoint Image "
          decoding="async"
          src="https://cdn.pinpoint.com/card.png"
        />
      </div>
    </a>
    <div
      className="alt"
    >
      Image Caption
    </div>
  </div>
</div>
`;

exports[`Test simple info notice 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="notice info"
  >
    <div
      className="icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-info-circle fa-w-16 fa-fw "
        data-icon="info-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <p>
        This is an info notice
      </p>
    </div>
  </div>
</div>
`;

exports[`Test simple inline image 1`] = `
<div
  className="Pinpoint document"
>
  <div>
    <img
      alt="card"
      className="Pinpoint Image inline_image"
      decoding="async"
      src="https://cdn.pinpoint.com/card.png"
    />
  </div>
</div>
`;

exports[`Test simple inline image with link 1`] = `
<div
  className="Pinpoint document"
>
  <div>
    <a
      href="https://pinpoint.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="card"
        className="Pinpoint Image inline_image"
        decoding="async"
        src="https://cdn.pinpoint.com/card.png"
      />
    </a>
  </div>
</div>
`;

exports[`Test simple ordered list 1`] = `
<div
  className="Pinpoint document"
>
  <ol>
    <li>
      Hi
    </li>
  </ol>
</div>
`;

exports[`Test simple paragraph 1`] = `
<div
  className="Pinpoint document"
>
  <p>
    Hi
  </p>
</div>
`;

exports[`Test simple text 1`] = `
<div
  className="Pinpoint document"
>
  Hi
</div>
`;

exports[`Test simple warning notice 1`] = `
<div
  className="Pinpoint document"
>
  <div
    className="notice warning"
  >
    <div
      className="icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-triangle fa-w-18 fa-fw "
        data-icon="exclamation-triangle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <p>
        This is a warning notice
      </p>
    </div>
  </div>
</div>
`;
